--- a/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
@@ -72,7 +72,7 @@
 
     - name: Set tls certificate path for LTB playbook
       ansible.builtin.set_fact:
-        ldaptoolbox_openldap_sslgroup: "root"
+        ldaptoolbox_openldap_sslgroup: "ldap"
         ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ tls_certificates_directory_path }}/certs/{{ hostvars['127.0.0.1']['tls_ca_certificate']
          | basename }}" # noqa var-naming
         ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/certs/{{ hostvars['127.0.0.1']['tls_certificate']
