--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -21,7 +21,8 @@
     state: present
 
 - name: Search schema
-  ansible.builtin.command: ldapsearch -Y EXTERNAL -H "{{ ldap_host_string }}" -b "{{ ldaptoolbox_openldap_suffix }}"
+  ansible.builtin.shell: |
+    ldapsearch -Y EXTERNAL -H "{{ ldap_host_string }}" -b "{{ ldaptoolbox_openldap_suffix }}"
   changed_when: false
   ignore_errors: true
   register: schema_output
@@ -43,5 +44,6 @@
         mode: "{{ openldap_configuration_mode }}"
 
     - name: Execute domain config file
-      ansible.builtin.command: ldapadd -Y EXTERNAL -H "{{ ldap_host_string }}" -f "{{ openldap_config_dest_dir }}"/add_domain.ldif
+      ansible.builtin.shell: |
+        ldapadd -Y EXTERNAL -H "{{ ldap_host_string }}" -f "{{ openldap_config_dest_dir }}"/add_domain.ldif
       changed_when: false
