--- a/security/security.yml
+++ b/security/security.yml
@@ -77,6 +77,8 @@
 - name: Install openldap server and apply configurations
   hosts: auth_server
   remote_user: root
+  sudo: yes
+  gather_facts: no
   tasks:
     - name: Include server prerequisite config
       ansible.builtin.include_role:
