--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -20,8 +20,12 @@
     insertafter: EOF
     state: present
 
+- name: Source
+  ansible.builtin.command: source "{{ env_var_path }}"
+  changed_when: false
+
 - name: Search schema
-  ansible.builtin.shell: |
+  ansible.builtin.command: |
     ldapsearch -Y EXTERNAL -H "{{ ldap_host_string }}" -b "{{ ldaptoolbox_openldap_suffix }}"
   changed_when: false
   ignore_errors: true
@@ -44,6 +48,6 @@
         mode: "{{ openldap_configuration_mode }}"
 
     - name: Execute domain config file
-      ansible.builtin.shell: |
+      ansible.builtin.command: |
         ldapadd -Y EXTERNAL -H "{{ ldap_host_string }}" -f "{{ openldap_config_dest_dir }}"/add_domain.ldif
       changed_when: false
