--- a/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
@@ -63,12 +63,12 @@
         - { file: "{{ hostvars['127.0.0.1']['tls_certificate'] }}", directory: certs }
         - { file: "{{ hostvars['127.0.0.1']['tls_certificate_key'] }}", directory: private }
 
-    - name: Copy Certificate to control plane for client setup
-      ansible.builtin.copy:
-        src: "{{ hostvars['127.0.0.1']['tls_ca_certificate'] }}"
-        dest: "{{ tls_cert_path }}"
-        mode: "{{ openldap_cert_permissions }}"
-      delegate_to: localhost
+    # - name: Copy Certificate to control plane for client setup
+    #   ansible.builtin.copy:
+    #     src: "{{ hostvars['127.0.0.1']['tls_ca_certificate'] }}"
+    #     dest: "{{ tls_cert_path }}"
+    #     mode: "{{ openldap_cert_permissions }}"
+    #   delegate_to: localhost
 
     - name: Set tls certificate path for LTB playbook
       ansible.builtin.set_fact:
