--- a/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq_ubuntu.yml
@@ -70,9 +70,13 @@
     #     mode: "{{ openldap_cert_permissions }}"
     #   delegate_to: localhost
 
+    - name: Generate TLS certificates
+      ansible.builtin.apt:
+        pkg:
+          - "{{ ubuntu_cert_pkg }}"
+
     - name: Set tls certificate path for LTB playbook
       ansible.builtin.set_fact:
-        ldaptoolbox_openldap_sslgroup: "ldap"
         ldaptoolbox_openldap_olcTLSCACertificateFile: "/etc/ldap/ca-certificates.crt" # noqa var-naming
         ldaptoolbox_openldap_olcTLSCertificateFile: "{{ tls_certificates_directory_path }}/certs/{{ hostvars['127.0.0.1']['tls_certificate']
          | basename }}" # noqa var-naming
