--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -28,3 +28,4 @@ openldap_config_src_path: "{{ role_path }}/templates/add_domain.ldif"
 ldap_host_string: "ldapi://%2Fvar%2Frun%2Fslapd%2Fldapi"
 schema_search_string: "Omnia_set_organization"
 env_var_path: "/root/.bashrc"
+ldap_bin_path: "/usr/local/openldap/bin/"
