--- a/provision/roles/xcat_repo_manipulate/vars/postscripts.yml
+++ b/provision/roles/xcat_repo_manipulate/vars/postscripts.yml
@@ -40,3 +40,8 @@ Make sure cuda rpm file is downloaded completely."
 cuda_postscripts_path:
   - { src: "{{ role_path }}/files/postscripts/omnia_cuda", dest: "/install/postscripts/omnia_cuda", mode: "755" }
 download_retries_count: 10
+
+# Usage: configure_rocm.yml
+rocm_pkgs_path: ""
+rocm_postscripts_path: ""
+  - { src: "{{ role_path }}/files/postscripts/omnia_rocm", dest: "/install/postscripts/omnia_rocm", mode: "755" }
