--- a/provision/roles/xcat_discovery_provision/tasks/postscripts/configure_postscripts.yml
+++ b/provision/roles/xcat_discovery_provision/tasks/postscripts/configure_postscripts.yml
@@ -56,3 +56,6 @@
   when:
     - cuda_config_status
     - cuda_repo_stat.stat.exists
+
+- name: Configure postscripts for CUDA
+  ansible.builtin.command: chdef all -p postscripts=omnia_rocm
