--- a/provision/roles/xcat_repo_manipulate/tasks/postscripts/configure_rocm.yml
+++ b/provision/roles/xcat_repo_manipulate/tasks/postscripts/configure_rocm.yml
@@ -24,7 +24,7 @@
   ansible.builtin.lineinfile:
     path: "{{ xcat_rhel8_post_script }}"
     regexp: 'EOF'
-    line: 'echo "PATH=$PATH:/opt/dell/srvadmin/sbin:/usr/local/sbin:/usr/local/bin/:/opt/rocm-{{ rocm_version }}/bin" >> /etc/bashrc'
+    line: 'echo "PATH=$PATH:/opt/dell/srvadmin/sbin:/usr/local/sbin:/usr/local/bin/:/opt/rocm/bin" >> /etc/bashrc'
 
 # - name: Update osimage with cuda repository
 #   ansible.builtin.command: chdef -t osimage -o {{ provision_os_image }} -p pkgdir={{ rocm_pkgs_path }}
