--- a/provision/roles/xcat_repo_manipulate/tasks/postscripts/configure_rocm.yml
+++ b/provision/roles/xcat_repo_manipulate/tasks/postscripts/configure_rocm.yml
@@ -26,6 +26,6 @@
     regexp: 'EOF'
     line: 'echo "PATH=$PATH:/opt/dell/srvadmin/sbin:/usr/local/sbin:/usr/local/bin/:/opt/rocm/bin" >> /etc/bashrc'
 
-# - name: Update osimage with cuda repository
-#   ansible.builtin.command: chdef -t osimage -o {{ provision_os_image }} -p pkgdir={{ rocm_pkgs_path }}
-#   changed_when: true
+- name: Update osimage with rocm repository
+  ansible.builtin.command: chdef -t osimage -o {{ provision_os_image }} -p pkgdir={{ rocm_pkgs_path }}
+  changed_when: true
